--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 ansi-to-tui = "7.0.0"
+clap = {version="4.5.21", features = ["derive"]}
 color-eyre = "0.6.3"
 crossterm = "0.28.1"
 ratatui = "0.29.0"
